--- a/graphql-todo-items/.eslintrc
+++ b/graphql-todo-items/.eslintrc
@@ -3,6 +3,11 @@
   "parserOptions": {
     "project": "./tsconfig.json"
   },
+  "settings": {
+    "import/resolver": {
+      "typescript": {}
+    }
+  },
   "extends": [
     "airbnb-typescript/base",
     "eslint:recommended",
@@ -23,7 +28,29 @@
     "no-cond-assign": ["error", "except-parens"],
     "import/no-cycle": 0,
     "@typescript-eslint/interface-name-prefix": 0,
-    "@typescript-eslint/camelcase": ["error",{"allow":  ["resolveReference"]}]
+    "@typescript-eslint/naming-convention": [
+      "error",
+      {
+        "selector": "default",
+        "format": ["camelCase"]
+      },
+      {
+        "selector": "variable",
+        "format": null,
+        "filter": {
+          "regex": ".*resolveReference$",
+          "match": true
+        }
+      },
+      {
+        "selector": "variable",
+        "format": ["camelCase", "UPPER_CASE", "PascalCase"]
+      },
+      {
+        "selector": "typeLike",
+        "format": ["PascalCase"]
+      }
+    ]
   },
   "env": {
     "browser": true,
