--- a/graphql-todo-items/package.json
+++ b/graphql-todo-items/package.json
@@ -16,12 +16,9 @@
   "main": "index.js",
   "scripts": {
     "api:generate": "ts-node ./generateApiForMicroservice",
-    "graphql:codegen": "chimp gql:generate && npm run prettify:all",
-    "graphql:generateAll": "npm run graphql:codegen && npm run graphql:generateSchema && npm run graphql:typegen",
-    "graphql:generateSchema": "ts-node -r tsconfig-paths/register ./generated/graphql/printSchema.ts > ./schema.graphql",
-    "graphql:typegen": "graphql-codegen --config codegen.js && node ./fix-generated.js",
+    "chimp": "chimp generate",
     "lint": "eslint --fix --ext .ts --quiet --cache src/",
-    "postinstall": "npm run graphql:generateAll",
+    "postinstall": "npm run chimp",
     "prettify:all": "npx prettier --write \"src/**/*.ts\" \"generated/**/*.ts\" --loglevel error",
     "start:ts": "JWT_SECRET='Yp3s6v9y$B&E)H@McQfThWmZq4t7w!z%' nodemon -r tsconfig-paths/register --config ./nodemon.run.json ./src/index.ts",
     "start": "npm run start:ts",
@@ -42,7 +39,6 @@
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "graphql": "^15.0.0",
-    "graphql-import": "^1.0.2",
     "graphql-tools": "^6.0.9",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
@@ -54,18 +50,24 @@
   },
   "devDependencies": {
     "@apollo/gateway": "^0.17.0",
-    "@graphql-codegen/add": "1.17.0",
-    "@graphql-codegen/cli": "1.17.0",
-    "@graphql-codegen/typescript": "1.17.0",
-    "@graphql-codegen/typescript-mongodb": "1.17.0",
-    "@graphql-codegen/typescript-operations": "1.17.0",
-    "@graphql-codegen/typescript-resolvers": "1.17.0",
+    "@graphql-codegen/add": "1.17.7",
+    "@graphql-codegen/cli": "1.20.1",
+    "@graphql-codegen/typescript": "1.20.2",
+    "@graphql-codegen/typescript-mongodb": "1.18.0",
+    "@graphql-codegen/typescript-operations": "1.17.14",
+    "@graphql-codegen/typescript-resolvers": "1.18.1",
     "@jest/globals": "^26.0.1",
     "@types/jest": "^25.2.1",
     "@types/node": "~12.12.23",
     "@types/shelljs": "^0.8.8",
-    "@typescript-eslint/eslint-plugin": "^2.29.0",
-    "@typescript-eslint/parser": "^2.29.0",
+    "@typescript-eslint/eslint-plugin": "4.5.0",
+    "@typescript-eslint/parser": "4.5.0",
+    "eslint": "7.12.0",
+    "eslint-config-airbnb-typescript": "12.0.0",
+    "eslint-import-resolver-typescript": "2.3.0",
+    "eslint-config-prettier": "6.14.0",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-prettier": "3.1.4",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.9",
     "apollo-link-http": "^1.5.17",
@@ -73,13 +75,8 @@
     "apollo-link-schema-with-stack": "^1.1.3",
     "cross-fetch": "^3.0.4",
     "cz-conventional-changelog": "3.1.0",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb-typescript": "^7.2.0",
-    "eslint-config-prettier": "^6.10.1",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-prettier": "^3.1.3",
     "federation-testing-tool": "^3.0.2",
-    "chimp": "2.0.1",
+    "chimp": "3.2.4",
     "chimp-graphql-codegen-plugin": "0.1.0",
     "jest": "^26.0.1",
     "jest-circus": "^26.0.1",
