--- a/graphql-todo-lists/tsconfig.json
+++ b/graphql-todo-lists/tsconfig.json
@@ -8,8 +8,8 @@
     "esModuleInterop": true,
     "baseUrl": "./",
     "paths": {
-      "@app/*": ["./src/*"],
-      "@generated/*": ["./generated/*"]
+      "~app/*": ["./src/*"],
+      "~generated/*": ["./generated/*"]
     }
   },
   "exclude": [
