--- a/graphql-todo-lists/package.json
+++ b/graphql-todo-lists/package.json
@@ -30,15 +30,13 @@
   },
   "dependencies": {
     "@apollo/federation": "^0.17.0",
-    "@graphql-tools/graphql-file-loader": "^6.0.13",
-    "@graphql-tools/load": "^6.0.13",
-    "@graphql-tools/merge": "^6.0.13",
-    "apollo-server-express": "^2.13.1",
-    "cache-manager": "^3.3.0",
-    "cookie-parser": "^1.4.5",
-    "express": "^4.17.1",
-    "graphql": "^15.0.0",
+    "apollo-server-express": "2.16.1",
+    "cookie-parser": "1.4.5",
+    "express": "4.17.1",
+    "graphql": "15.5.1",
+    "graphql-tag": "2.11.0",
     "graphql-tools": "^6.0.9",
+    "cache-manager": "^3.3.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "portable-fetch": "^3.0.0",
@@ -64,20 +62,20 @@
     "eslint-config-prettier": "6.14.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-prettier": "3.1.4",
-    "chimp": "3.2.4",
-    "chimp-graphql-codegen-plugin": "0.1.0",
-    "jest": "^26.0.1",
-    "jest-circus": "^26.0.1",
+    "chimp": "4.2.1",
+    "chimp-graphql-codegen-plugin": "0.2.0",
+    "jest": "26.4.0",
+    "lint-staged": "10.2.11",
+    "nodemon": "2.0.4",
+    "prettier": "2.0.5",
+    "shelljs": "0.8.4",
+    "testdouble": "3.16.1",
+    "testdouble-jest": "2.0.0",
+    "ts-jest": "26.1.3",
+    "ts-node": "8.10.2",
+    "typescript": "3.9.7",
     "kill-port": "^1.6.0",
-    "lint-staged": "^10.2.9",
-    "nodemon": "^2.0.3",
-    "prettier": "^2.0.4",
-    "sort-package-json": "^1.42.1",
-    "testdouble": "^3.15.0",
-    "testdouble-jest": "^2.0.0",
-    "ts-jest": "^25.5.1",
-    "ts-node": "^8.8.2",
-    "typescript": "3.9.3"
+    "sort-package-json": "^1.42.1"
   },
   "lint-staged": {
     "src/**/*.ts*": [
