--- a/graphql-todo-items/package.json
+++ b/graphql-todo-items/package.json
@@ -60,6 +60,7 @@
     "@jest/globals": "^26.0.1",
     "@types/jest": "^25.2.1",
     "@types/node": "~12.12.23",
+    "@types/prettier": "2.0.0",
     "@types/shelljs": "^0.8.8",
     "@typescript-eslint/eslint-plugin": "4.5.0",
     "@typescript-eslint/parser": "4.5.0",
