--- a/web/package.json
+++ b/web/package.json
@@ -34,7 +34,7 @@
     "react-loadable": "^5.3.1",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "^3.4.1",
+    "react-scripts": "3.4.1",
     "react-transition-group": "^2.3.1",
     "styled-components": "^5.1.0",
     "subscriptions-transport-ws": "^0.9.15",
@@ -42,7 +42,7 @@
     "typescript": "^3.9.3"
   },
   "scripts": {
-    "start": "npm run download-schema && nodemon --watch src -e graphql --exec 'npm run codegen && react-scripts start'",
+    "start": "npm run download-schema && nodemon --watch src -e graphql --exec 'npm run codegen && NODE_OPTIONS=--openssl-legacy-provider react-scripts start'",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom --passWithNoTests --env=jsdom-fourteen",
     "eject": "react-scripts eject",
