--- a/package.json
+++ b/package.json
@@ -8,22 +8,18 @@
     "start:todo-lists-microservice": "wait-on tcp:27017 && cd microservice-todo-lists && ./gradlew clean bootRun",
     "start:todo-items-microservice": "wait-on tcp:27017 && cd microservice-todo-items && ./gradlew clean bootRun",
     "start:initDB": "wait-on tcp:8090 && wait-on tcp:8091 && ./initDb.sh",
-    "start:todo-lists-graph": "wait-on tcp:8090 && cd graphql-todo-lists && npm run start",
-    "start:todo-items-graph": "wait-on tcp:8091 && cd graphql-todo-items && npm run start",
+    "start:todo-lists-graph": "wait-on tcp:8090 && cd graphql-todo-lists-java && bash ./start.sh",
+    "start:todo-lists-graph:build": "wait-on tcp:8090 && cd graphql-todo-lists-java && ./gradlew build --continuous",
+    "start:todo-items-graph": "wait-on tcp:8090 && cd graphql-todo-items-java && bash ./start.sh",
+    "start:todo-items-graph:build": "wait-on tcp:8090 && cd graphql-todo-items-java && ./gradlew build --continuous",
     "start:gateway": "wait-on tcp:4001 && wait-on tcp:4002 && cd graphql-gateway && npm run start:local",
     "start:auth-module": "cd auth-module && npm run start",
     "start:web": "wait-on tcp:4000 && cd web && npm run start",
-    "install:todo-lists-graph": "cd graphql-todo-lists && npm install",
-    "install:todo-items-graph": "cd graphql-todo-items && npm install",
     "install:gateway": "cd graphql-gateway && npm install",
     "install:auth-module": "cd auth-module && npm install",
     "install:web": "cd web && npm install",
     "postinstall": "concurrently 'npm:install:*'",
-    "type-check:todo-lists-graph": "cd graphql-todo-lists && npm run type-check",
-    "type-check:todo-items-graph": "cd graphql-todo-items && npm run type-check",
     "type-check": "concurrently -r 'npm:type-check:*'",
-    "precommit:todo-lists-graph": "cd graphql-todo-lists && npm run precommit",
-    "precommit:todo-items-graph": "cd graphql-todo-items && npm run precommit",
     "precommit": "concurrently -r 'npm:precommit:*'",
     "start": "concurrently 'npm:start:*'"
   },
@@ -43,7 +39,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run type-check && npm run precommit:todo-lists-graph && npm run precommit:todo-items-graph"
+      "pre-commit": "npm run type-check"
     }
   },
   "devDependencies": {
