--- a/graphql-gateway/package.json
+++ b/graphql-gateway/package.json
@@ -4,15 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start:local": "nodemon --watch ./local-gateway.js --watch ../graphql-todo-items/schema.graphql --watch ../graphql-todo-lists/schema.graphql ./local-gateway"
+    "start:local": "rover dev --supergraph-config supergraph.yaml --router-config router.yaml"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@apollo/gateway": "^0.16.2",
-    "apollo-server": "^2.14.1",
-    "nodemon": "^2.0.4"
-  },
-  "dependencies": {}
+    "@apollo/rover": "^0.17.2"
+  }
 }
