--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "start:web": "wait-on tcp:127.0.0.1:4000 && cd web && npm run start",
     "install:gateway": "cd graphql-gateway && npm install",
     "install:auth-module": "cd auth-module && npm install",
-    "install:web": "cd web && npm install",
+    "install:web": "cd web && npm install --force",
     "postinstall": "concurrently 'npm:install:*'",
     "type-check": "concurrently -r 'npm:type-check:*'",
     "precommit": "concurrently -r 'npm:precommit:*'",
