Everything works with Chimp 6

--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "start:initDB": "wait-on tcp:8090 && wait-on tcp:8091 && ./initDb.sh",
     "start:todo-lists-graph": "wait-on tcp:8090 && cd graphql-todo-lists && npm run start",
     "start:todo-items-graph": "wait-on tcp:8091 && cd graphql-todo-items && npm run start",
-    "start:gateway": "wait-on tcp:4001 && wait-on tcp:4002 && cd graphql-gateway && npm run start:local",
+    "start:gateway": "wait-on tcp:4001 && wait-on tcp:4002 && cd rover && npm run start:local",
     "start:auth-module": "cd auth-module && npm run start",
-    "start:web": "wait-on tcp:4000 && cd web && npm run start",
+    "start:web": "wait-on tcp:127.0.0.1:4000 && cd web && npm run start",
     "install:todo-lists-graph": "cd graphql-todo-lists && npm install",
     "install:todo-items-graph": "cd graphql-todo-items && npm install",
-    "install:gateway": "cd graphql-gateway && npm install",
+    "install:gateway": "cd rover && npm install",
     "install:auth-module": "cd auth-module && npm install",
     "install:web": "cd web && npm install --force",
     "postinstall": "concurrently 'npm:install:*'",
