--- a/graphql-todo-items/package.json
+++ b/graphql-todo-items/package.json
@@ -8,7 +8,7 @@
     "postinstall": "npm run chimp",
     "lint": "eslint --fix --ext .ts --quiet --cache src/",
     "precommit": "lint-staged",
-    "start": "npm run start:ts",
+    "start": "tsx ./generateApiForMicroservice.ts && PORT=4001 npm run start:ts",
     "start:ts": "nodemon -r tsconfig-paths/register --config ./nodemon.run.json ./src/index.ts",
     "test": "jest --forceExit",
     "test:watch": "jest --watch",
@@ -38,15 +38,6 @@
     "tsconfig-paths": "3.9.0"
   },
   "devDependencies": {
-    "@graphql-codegen/add": "5.0.0",
-    "@graphql-codegen/cli": "5.0.0",
-    "@graphql-codegen/typescript": "4.0.1",
-    "@graphql-codegen/typescript-mongodb": "2.4.6",
-    "@graphql-codegen/typescript-operations": "4.0.1",
-    "@graphql-codegen/typescript-resolvers": "4.0.1",
-    "@graphql-tools/graphql-file-loader": "8.0.0",
-    "@graphql-tools/load": "8.0.0",
-    "@graphql-tools/merge": "9.0.0",
     "@jest/globals": "26.1.0",
     "@tsconfig/node18": "^18.2.0",
     "@types/body-parser": "^1.19.2",
@@ -59,14 +50,14 @@
     "@types/shelljs": "0.8.8",
     "@typescript-eslint/eslint-plugin": "6.2.1",
     "@typescript-eslint/parser": "6.2.1",
-    "chimp": "6.0.0-alpha.0",
+    "chimp": "latest",
     "chimp-datasources-generator": "^3.0.0",
-    "chimp-graphql-codegen-plugin": "latest",
     "eslint": "8.46.0",
     "eslint-config-airbnb-typescript": "17.1.0",
     "eslint-config-prettier": "8.10.0",
     "eslint-import-resolver-typescript": "3.5.5",
     "eslint-plugin-import": "2.28.0",
+    "eslint-plugin-jest": "^27.2.3",
     "eslint-plugin-prettier": "5.0.0",
     "jest": "29.6.2",
     "lint-staged": "10.2.11",
@@ -76,7 +67,7 @@
     "testdouble": "3.18.0",
     "testdouble-jest": "2.0.0",
     "ts-jest": "29.1.1",
-    "ts-node": "10.9.1",
+    "tsx": "^3.12.7",
     "typescript": "5.1.6"
   }
 }
